--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Babel 6 fork of babel-plugin-dead-code-elimination.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prebuild": "rimraf lib",
+    "build": "babel src --out-dir lib",
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/erikdesjardins/babel-plugin-transform-dce/issues"
   },
-  "homepage": "https://github.com/erikdesjardins/babel-plugin-transform-dce#readme"
+  "homepage": "https://github.com/erikdesjardins/babel-plugin-transform-dce#readme",
+  "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "rimraf": "^2.5.2"
+  }
 }
