--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prebuild": "rimraf lib",
     "build": "babel src --out-dir lib",
+    "test": "ava test/test.js"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,12 @@
   },
   "homepage": "https://github.com/erikdesjardins/babel-plugin-transform-dce#readme",
   "devDependencies": {
+    "ava": "^0.12.0",
     "babel-cli": "^6.6.5",
+    "babel-core": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
+    "globby": "^4.0.0",
+    "mz": "^2.3.1",
     "rimraf": "^2.5.2"
   }
 }
