convert visitors to Babel 6 format

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "globby": "^4.0.0",
     "mz": "^2.3.1",
     "rimraf": "^2.5.2"
+  },
+  "dependencies": {
+    "babel-types": "^6.6.5"
   }
 }
