--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ node_js:
   - "4"
   - "0.12"
 script:
-  - npm run build
   - npm test
+  - npm run build
+after_success:
+  - './node_modules/.bin/nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls'
 deploy:
   provider: npm
   email: 'public@erikdesjardins.io'
