--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "prebuild": "rimraf lib",
-    "build": "babel src --out-dir lib",
+    "build": "cross-env NODE_ENV=production babel src --out-dir lib",
+    "pretest": "cross-env NODE_ENV=development babel src --out-dir lib",
     "test": "ava test/test.js"
   },
   "repository": {
@@ -26,8 +27,11 @@
     "babel-cli": "^6.6.5",
     "babel-core": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
+    "coveralls": "^2.11.8",
+    "cross-env": "^1.0.7",
     "globby": "^4.0.0",
     "mz": "^2.3.1",
+    "nyc": "^6.0.0",
     "rimraf": "^2.5.2"
   },
   "dependencies": {
