--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-plugin-syntax-decorators": "^6.5.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.6.5",
     "babel-plugin-transform-node-env-inline": "^6.5.0",
+    "babel-plugin-transform-regenerator": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "coveralls": "^2.11.8",
     "cross-env": "^1.0.7",
